Updates after Claude changes